<resources>
    <string name="app_name">Care Buddy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="age">Age</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="new_user_signup">New User?SignUp</string>
    <string name="confirm_your_location">Confirm your location</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="email_verified_success">Verification email sent successfully</string>
    <string name="google_maps_key">AIzaSyBSA1oW_mbWjf_q-zsmm0x1LrXtvHhpb3s</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="upcoming_bookings">Upcoming bookings</string>
    <string name="top_nurses_near_you">Top nurses near you</string>
    <string name="self_care">Self Care</string>
    <string name="hello">Hello!</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>