<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.nurse.NurseLoginActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/nurseLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/nurseLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textSize="18sp"
            android:inputType="textPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nurseLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="298dp" />


</androidx.constraintlayout.widget.ConstraintLayout>